--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div id="collapseThreePic" class="accordion-collapse collapse"
                                 aria-labelledby="headingThreePic" data-bs-parent="#settingsListPic">
                                 <div class="accordion-body" id="image">
-                                                                        <div class="p-2">
+                                    <div class="p-2">
                                         <input type="text" id="inputImageMessage" placeholder="ファイル名を入力してください">
                                     </div>
   
@@ -327,6 +327,8 @@
                                             <option value='width="5%"'>50%</option>
                                             <option value='width="7.5%"'>75%</option>
                                             <option value='width="10%"' selected>100%</option>
+                                            <option value='width="20%"'>200%</option>
+                                            <option value='width="30%"'>300%</option>
                                         </select>
                                 
                                     </div>
