--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
                                                                         <div class="p-2">
                                         <input type="text" id="inputImageMessage" placeholder="ファイル名を入力してください">
                                     </div>
-  
+
                                     <div class="p-2">
-  
+
                                         罫線の色:
                                         <select id="imageRuledLineColor">
                                             <option value="dark">Dark</option>
@@ -376,6 +376,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
+    <script src="js/breadcrumb.js"></script>
     <script src="js/rowColumns.js"></script>
     <script src="js/accordion.js"></script>
     <script src="js/carousel.js"></script>
