--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFourText">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFourText" aria-expanded="false"
+                                    aria-controls="collapseFourText">
+                                    パンくずリスト
+                                </button>
+                            </h2>
+                            <div id="collapseFourText" class="accordion-collapse collapse"
+                                aria-labelledby="headingFourText" data-bs-parent="#settingsListText">
+                                <div class="accordion-body" id="breadcrumb">
+                                    <div>
+                                        <label for="divCnt">深さ</label>
+                                        <input type="number" name="count" id="divCnt" placeholder="深さ" value="1">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="tab-pane fade show" id="picture-tab" role="tabpanel" aria-labelledby="picture-tab">
