--- a/html/div/index.html
+++ b/html/div/index.html
@@ -26,12 +26,17 @@
             <div class="p-5">
                 <h3 class="text-3xl py-2 font-mono">Sizing</h3>
                 <div class="flex space-x-3 w-70 py-1">
-                    <span class="text-xl">縦 :</span>
+                    <span class="text-xl">縦&nbsp:</span>
                     <span class="text-xl w-11" id="divSizeHeihgtValue">Auto</span>
                     <input type="range" min="0" max="32" id="divSizeHeight" value="0">
                 </div>
+                <div class="flex space-x-3 w-70 py-1">
+                    <span class="text-xl">横&nbsp:</span>
+                    <span class="text-xl w-11" id="divSizeWidthValue">Auto</span>
+                    <input type="range" min="0" max="32" id="divSizeWidth" value="0">
             </div>
         </div>
+    </div>
     </div>
 
     <div class="pt-10 pl-10">
